<resources>
    <string name="app_name">SampleApp</string>
    <string name="welcome_back"> Welcome To Oreoo World</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="products_most_popular">Products | Most Popular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_bill">Bill</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="quantity">Quantity</string>
    <string name="purchase_now">Purchase Now</string>
    <string name="total_price_default">Total Price: 0</string>
    <string name="current_items_default">Current Items: 0</string>
    <string name="bill_code">Bill Code</string>
    <string name="total_price">Total Price</string>
    <string name="created_date">Created Date</string>
    <string name="type_a_message">Type a message</string>
    <string name="phone_number">Phone Number</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="address_information">Address Information</string>
    <string name="bill_confirmation">Bill Confirmation</string>
    <string name="payment">Payment</string>>
</resources>