<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ConfirmActivity">

        <FrameLayout
            android:id="@+id/addressConfirmBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:behavior_hideable="false"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/background_popup"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/address_information"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/receiverName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Name"
                        android:imeOptions="actionNext" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shippingAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shipping_address" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionDone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/payment"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

                <RadioGroup
                    android:id="@+id/payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/cash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cash" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/visaCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Visa Card" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/confirmButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/background_buy_button"
                        android:fontFamily="@font/ubuntu_medium"
                        android:text="@string/purchase_now"
                        android:textColor="@color/white"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/cancelButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/background_cancel_button"
                        android:fontFamily="@font/ubuntu_medium"
                        android:text="Cancel"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>