<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="com.thanhha.myapplication.models.dto.Item" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:backgroundTint="@color/primary"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/items_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/product_name"
                    android:textColor="@color/primary_text"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{item.productName}"
                    android:textColor="@color/primary_text"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/product_price"
                    android:textColor="@color/primary_text"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{item.productPrice}"
                    android:textColor="@color/primary_text"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quantity"
                    android:textColor="@color/primary_text"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{item.quantity}"
                    android:textColor="@color/primary_text"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cost"
                    android:textColor="@color/primary_text"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:id="@+id/cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{item.totalPrice}"
                    android:textColor="@color/primary_text"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>